# Linear-and-Combinatorial-Optimization-Project

./: .gitignore  README.md
COINOR_presentation/: presentation_1.tex
COINOR_presentation/examples/: defaults  dovetail.mps  driver  dual.mps  dual_simplex  dual_simplex.cpp  simplex_minimum.cpp  simplex_minimum_extension  simplex_minimum_extension.cpp
Vertex_Cover_Problem/: VertexCover.tex  example.bib
Vertex_Cover_Problem/Chapters/: Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  ChapterTemplate.tex
Vertex_Cover_Problem/Code/: CMakeLists.txt
Vertex_Cover_Problem/Code/data/: adjacency1.adj  adjacency2.adj  adjacency3.adj
Vertex_Cover_Problem/Code/include/: Graph.hpp  Visuals.hpp
Vertex_Cover_Problem/Code/src/: Graph.cpp  VertexCover.cpp  Visuals.cpp  main.cpp
Vertex_Cover_Problem/Presentation/: VertexCover_presentation.tex
